--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="listThemes">
+    <string-array name="listThemes" translatable="false">
         <item>Holo</item>
         <item>Holo_Light_DarkActionBar</item>
         <item>Theme_Holo_Light</item>
     </string-array>
 
-    <string-array name="listValues">
+    <string-array name="listValues" translatable="false">
         <item>1</item>
         <item>2</item>
         <item>3</item>
+    </string-array>
+
+    <string-array name="listUsages">
+        <item>None</item>
+        <item>Volume buttons</item>
+        <item>Chanel buttons</item>
     </string-array>
 </resources>
