--- a/res/layout/activity_ir.xml
+++ b/res/layout/activity_ir.xml
@@ -1,4 +1,21 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?><!--
+     Copyright (c) 2014 Emil Suleymanov
+
+     This program is free software; you can redistribute it and/or
+     modify it under the terms of the GNU General Public License
+     as published by the Free Software Foundation; either version 2
+     of the License, or (at your option) any later version.
+
+     This program is distributed in the hope that it will be useful,
+     but WITHOUT ANY WARRANTY; without even the implied warranty of
+     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+     GNU General Public License for more details.
+
+     You should have received a copy of the GNU General Public License
+     along with this program; if not, write to the Free Software
+     Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
+     MA  02110-1301, USA.
+-->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main_btn"
@@ -10,20 +27,20 @@
         android:id="@+id/spinner"
         android:layout_width="wrap_content"
         android:layout_height="75dp"
-        android:layout_alignBottom="@+id/button"
+        android:layout_alignBottom="@+id/power"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_toLeftOf="@+id/button" />
+        android:layout_toLeftOf="@+id/power" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/power"
         android:layout_width="wrap_content"
         android:layout_height="70dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:longClickable="false"
+        android:onClick="onPowerClick"
         android:text="@string/power_btn"
         android:textSize="25sp" />
 
@@ -46,6 +63,8 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
+            android:onClick="onWbClick"
+            android:singleLine="true"
             android:text="@string/wb"
             android:textSize="20sp" />
 
@@ -73,6 +92,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/button31"
+            android:onClick="onWfClick"
             android:text="@string/wf" />
 
         <Button
@@ -95,7 +115,6 @@
             android:layout_toLeftOf="@+id/button30"
             android:onClick="onSrClick"
             android:text="@string/sr"
-            android:textColor="#ffff0400"
             android:textSize="26sp" />
 
         <Button
