--- a/res/layout/rename_menu.xml
+++ b/res/layout/rename_menu.xml
@@ -19,31 +19,15 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:weightSum="1">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="231dp"
+    <EditText
+        android:id="@id/editText"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/imageView"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/imageView"
-        android:layout_gravity="right"
-        android:layout_toRightOf="@+id/imageView"
-        android:gravity="center"
-        android:text="@string/irremote_dialog_learning_sig_desc_closer_txt"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="164dp"
-        android:layout_height="169dp"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:background="@drawable/img_learning" />
+        android:inputType="text" />
 </RelativeLayout>
