--- a/res/layout-xlarge/done_menu.xml
+++ b/res/layout-xlarge/done_menu.xml
@@ -17,33 +17,31 @@
      MA  02110-1301, USA.
 -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:orientation="vertical"
     android:weightSum="1">
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="231dp"
+        android:layout_width="367dp"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/imageView"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/imageView"
-        android:layout_gravity="right"
-        android:layout_toRightOf="@+id/imageView"
         android:gravity="center"
-        android:text="@string/irremote_dialog_learning_sig_desc_closer_txt"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        android:text="@string/done_setting"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="164dp"
-        android:layout_height="169dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:background="@drawable/img_learning2" />
-</RelativeLayout>
+    <ScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="368dp"
+            android:layout_height="wrap_content"
+            android:scrollbars="vertical"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+    </ScrollView>
+
+</LinearLayout>
