--- a/res/layout-xlarge/wrt_mode.xml
+++ b/res/layout-xlarge/wrt_mode.xml
@@ -45,5 +45,5 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:background="@drawable/img_learning2" />
+        android:background="@drawable/img_learning" />
 </RelativeLayout>
