--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -102,6 +102,7 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_below="@+id/textView5"
         android:layout_centerHorizontal="true"
         android:autoLink="web"
