--- a/res/layout/done_menu.xml
+++ b/res/layout/done_menu.xml
@@ -25,7 +25,7 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="367dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/done_setting"
